static/styles/post.css
.post-container {
  border: 1px solid rgba(0,0,0,.125);
  border-radius: .25rem;
  display: flex;
}

.files-container {
  display: flex;
}

.file-container {
  max-width: 5rem;
}

.file {
  width: 100%;
}

.line-break {
  white-space: pre-line;
}

